코드검토 작업중!

--- a/pre-build/html/gnb/gnb-hoverable-dropdown.html
+++ b/pre-build/html/gnb/gnb-hoverable-dropdown.html
@@ -323,95 +323,97 @@
                 <div class="highlightArea cScroll">
                   <pre>
                               <code class="language-html">
-&lt;div id="gnb"&gt;
-    &lt;div id="menuBg"&gt;&lt;/div&gt;
-    &lt;ul class="menuList"&gt;
-        &lt;li&gt;
-            &lt;a href="#none" title="메뉴01"&gt;메뉴 01&lt;/a&gt;
-            &lt;ul class="depthTwo"&gt;
-                &lt;li&gt;
-                    &lt;a href="#" title="서브메뉴 01"&gt;서브메뉴 01&lt;/a&gt;
-                &lt;/li&gt;
-                &lt;li&gt;
-                    &lt;a href="#" title="서브메뉴 02"&gt;서브메뉴 02&lt;/a&gt;
-                &lt;/li&gt;
-                &lt;li&gt;
-                    &lt;a href="#" title="서브메뉴 03"&gt;서브메뉴 03&lt;/a&gt;
-                &lt;/li&gt;
-                &lt;li&gt;
-                    &lt;a href="#" title="서브메뉴 04"&gt;서브메뉴 04&lt;/a&gt;
-                &lt;/li&gt;
-                &lt;li&gt;
-                    &lt;a href="#" title="서브메뉴 05"&gt;서브메뉴 05&lt;/a&gt;
-                &lt;/li&gt;
-            &lt;/ul&gt;
-        &lt;/li&gt;
-        &lt;li&gt;
-            &lt;a href="#none" title="메뉴02"&gt;메뉴 02&lt;/a&gt;
-            &lt;ul class="depthTwo"&gt;
-                &lt;li&gt;
-                    &lt;a href="#" title="서브메뉴 01"&gt;서브메뉴 01&lt;/a&gt;
-                &lt;/li&gt;
-                &lt;li&gt;
-                    &lt;a href="#" title="서브메뉴 02"&gt;서브메뉴 02&lt;/a&gt;
-                &lt;/li&gt;
-                &lt;li&gt;
-                    &lt;a href="#" title="서브메뉴 03"&gt;서브메뉴 03&lt;/a&gt;
-                &lt;/li&gt;
-                &lt;li&gt;
-                    &lt;a href="#" title="서브메뉴 04"&gt;서브메뉴 04&lt;/a&gt;
-                &lt;/li&gt;
-            &lt;/ul&gt;
-        &lt;/li&gt;
-        &lt;li&gt;
-            &lt;a href="#none" title="메뉴03"&gt;메뉴 03&lt;/a&gt;
-            &lt;ul class="depthTwo"&gt;
-                &lt;li&gt;
-                    &lt;a href="#" title="서브메뉴 01"&gt;서브메뉴 01&lt;/a&gt;
-                &lt;/li&gt;
-                &lt;li&gt;
-                    &lt;a href="#" title="서브메뉴 02"&gt;서브메뉴 02&lt;/a&gt;
-                &lt;/li&gt;
-                &lt;li&gt;
-                    &lt;a href="#" title="서브메뉴 03"&gt;서브메뉴 03&lt;/a&gt;
-                &lt;/li&gt;
-            &lt;/ul&gt;
-        &lt;/li&gt;
-        &lt;li&gt;
-            &lt;a href="#none" title="메뉴04"&gt;메뉴 04&lt;/a&gt;
-            &lt;ul class="depthTwo"&gt;
-                &lt;li&gt;
-                    &lt;a href="#" title="서브메뉴 01"&gt;서브메뉴 01&lt;/a&gt;
-                &lt;/li&gt;
-                &lt;li&gt;
-                    &lt;a href="#" title="서브메뉴 02"&gt;서브메뉴 02&lt;/a&gt;
-                &lt;/li&gt;
-                &lt;li&gt;
-                    &lt;a href="#" title="서브메뉴 03"&gt;서브메뉴 03&lt;/a&gt;
-                &lt;/li&gt;
-                &lt;li&gt;
-                    &lt;a href="#" title="서브메뉴 04"&gt;서브메뉴 04&lt;/a&gt;
-                &lt;/li&gt;
-            &lt;/ul&gt;
-        &lt;/li&gt;
-        &lt;li&gt;
-            &lt;a href="#none" title="메뉴05"&gt;메뉴 05&lt;/a&gt;
-            &lt;ul class="depthTwo"&gt;
-                &lt;li&gt;
-                    &lt;a href="#" title="서브메뉴 01"&gt;서브메뉴 01&lt;/a&gt;
-                &lt;/li&gt;
-                &lt;li&gt;
-                    &lt;a href="#" title="서브메뉴 02"&gt;서브메뉴 02&lt;/a&gt;
-                &lt;/li&gt;
-                &lt;li&gt;
-                    &lt;a href="#" title="서브메뉴 03"&gt;서브메뉴 03&lt;/a&gt;
-                &lt;/li&gt;
-                &lt;li&gt;
-                    &lt;a href="#" title="서브메뉴 04"&gt;서브메뉴 04&lt;/a&gt;
-                &lt;/li&gt;
-            &lt;/ul&gt;
-        &lt;/li&gt;
-    &lt;/ul&gt;
+&lt;div id="wrap"&gt;
+  &lt;div id="gnb"&gt;
+      &lt;div id="menuBg"&gt;&lt;/div&gt;
+      &lt;ul class="menuList"&gt;
+          &lt;li&gt;
+              &lt;a href="#none" title="메뉴01"&gt;메뉴 01&lt;/a&gt;
+              &lt;ul class="depthTwo"&gt;
+                  &lt;li&gt;
+                      &lt;a href="#" title="서브메뉴 01"&gt;서브메뉴 01&lt;/a&gt;
+                  &lt;/li&gt;
+                  &lt;li&gt;
+                      &lt;a href="#" title="서브메뉴 02"&gt;서브메뉴 02&lt;/a&gt;
+                  &lt;/li&gt;
+                  &lt;li&gt;
+                      &lt;a href="#" title="서브메뉴 03"&gt;서브메뉴 03&lt;/a&gt;
+                  &lt;/li&gt;
+                  &lt;li&gt;
+                      &lt;a href="#" title="서브메뉴 04"&gt;서브메뉴 04&lt;/a&gt;
+                  &lt;/li&gt;
+                  &lt;li&gt;
+                      &lt;a href="#" title="서브메뉴 05"&gt;서브메뉴 05&lt;/a&gt;
+                  &lt;/li&gt;
+              &lt;/ul&gt;
+          &lt;/li&gt;
+          &lt;li&gt;
+              &lt;a href="#none" title="메뉴02"&gt;메뉴 02&lt;/a&gt;
+              &lt;ul class="depthTwo"&gt;
+                  &lt;li&gt;
+                      &lt;a href="#" title="서브메뉴 01"&gt;서브메뉴 01&lt;/a&gt;
+                  &lt;/li&gt;
+                  &lt;li&gt;
+                      &lt;a href="#" title="서브메뉴 02"&gt;서브메뉴 02&lt;/a&gt;
+                  &lt;/li&gt;
+                  &lt;li&gt;
+                      &lt;a href="#" title="서브메뉴 03"&gt;서브메뉴 03&lt;/a&gt;
+                  &lt;/li&gt;
+                  &lt;li&gt;
+                      &lt;a href="#" title="서브메뉴 04"&gt;서브메뉴 04&lt;/a&gt;
+                  &lt;/li&gt;
+              &lt;/ul&gt;
+          &lt;/li&gt;
+          &lt;li&gt;
+              &lt;a href="#none" title="메뉴03"&gt;메뉴 03&lt;/a&gt;
+              &lt;ul class="depthTwo"&gt;
+                  &lt;li&gt;
+                      &lt;a href="#" title="서브메뉴 01"&gt;서브메뉴 01&lt;/a&gt;
+                  &lt;/li&gt;
+                  &lt;li&gt;
+                      &lt;a href="#" title="서브메뉴 02"&gt;서브메뉴 02&lt;/a&gt;
+                  &lt;/li&gt;
+                  &lt;li&gt;
+                      &lt;a href="#" title="서브메뉴 03"&gt;서브메뉴 03&lt;/a&gt;
+                  &lt;/li&gt;
+              &lt;/ul&gt;
+          &lt;/li&gt;
+          &lt;li&gt;
+              &lt;a href="#none" title="메뉴04"&gt;메뉴 04&lt;/a&gt;
+              &lt;ul class="depthTwo"&gt;
+                  &lt;li&gt;
+                      &lt;a href="#" title="서브메뉴 01"&gt;서브메뉴 01&lt;/a&gt;
+                  &lt;/li&gt;
+                  &lt;li&gt;
+                      &lt;a href="#" title="서브메뉴 02"&gt;서브메뉴 02&lt;/a&gt;
+                  &lt;/li&gt;
+                  &lt;li&gt;
+                      &lt;a href="#" title="서브메뉴 03"&gt;서브메뉴 03&lt;/a&gt;
+                  &lt;/li&gt;
+                  &lt;li&gt;
+                      &lt;a href="#" title="서브메뉴 04"&gt;서브메뉴 04&lt;/a&gt;
+                  &lt;/li&gt;
+              &lt;/ul&gt;
+          &lt;/li&gt;
+          &lt;li&gt;
+              &lt;a href="#none" title="메뉴05"&gt;메뉴 05&lt;/a&gt;
+              &lt;ul class="depthTwo"&gt;
+                  &lt;li&gt;
+                      &lt;a href="#" title="서브메뉴 01"&gt;서브메뉴 01&lt;/a&gt;
+                  &lt;/li&gt;
+                  &lt;li&gt;
+                      &lt;a href="#" title="서브메뉴 02"&gt;서브메뉴 02&lt;/a&gt;
+                  &lt;/li&gt;
+                  &lt;li&gt;
+                      &lt;a href="#" title="서브메뉴 03"&gt;서브메뉴 03&lt;/a&gt;
+                  &lt;/li&gt;
+                  &lt;li&gt;
+                      &lt;a href="#" title="서브메뉴 04"&gt;서브메뉴 04&lt;/a&gt;
+                  &lt;/li&gt;
+              &lt;/ul&gt;
+          &lt;/li&gt;
+      &lt;/ul&gt;
+  &lt;/div&gt;
 &lt;/div&gt;
                               </code>
                             </pre>
@@ -428,7 +430,7 @@
     >li{position: relative; line-height: 50px; text-align: center; padding: 5px; box-sizing: border-box; min-width: 130px;
       >a{font-size: 24px; font-family: 'Noto Sans'; color: #fff;}
         .depthTwo{display: none; position: absolute; top: 60px; left: 0; z-index: 1000; 
-          >li{line-height: 50px; border: 1px solid #ddd; border-top: 0; background-color: rgba($color: #333, $alpha: 0.8);
+          >li{line-height: 50px; border: 1px solid #ddd; border-top: 0; padding: 5px; box-sizing: border-box; min-width: 130px; background-color: rgba($color: #333, $alpha: 0.8);
             >a{display: block; font-size: 16px; font-family: 'Noto Sans'; color: #fff;}
           }
         }
@@ -490,6 +492,10 @@
   line-height: 50px;
   border: 1px solid #ddd;
   border-top: 0;
+  padding: 5px;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
+  min-width: 130px;
   background-color: rgba(51, 51, 51, 0.8);
 }
 
@@ -508,7 +514,7 @@
                 <div class="highlightArea cScroll">
                   <pre>
                               <code class="language-javascript">
-$(document).ready(function(){
+$(function(){
     $('#gnb>ul>li').hover(function(){
         $(this).find('.depthTwo').stop().slideDown();
     },function(){
