--- a/pre-build/html/gnb/gnb-hover-full-dropdown.html
+++ b/pre-build/html/gnb/gnb-hover-full-dropdown.html
@@ -323,95 +323,97 @@
                 <div class="highlightArea cScroll">
                   <pre>
                               <code class="language-html">
-&lt;div id="gnb"&gt;
-    &lt;div id="menuBg"&gt;&lt;/div&gt;
-    &lt;ul class="menuList"&gt;
-        &lt;li&gt;
-            &lt;a href="#none" title="메뉴01"&gt;메뉴 01&lt;/a&gt;
-            &lt;ul class="depthTwo"&gt;
-                &lt;li&gt;
-                    &lt;a href="#" title="서브메뉴 01"&gt;서브메뉴 01&lt;/a&gt;
-                &lt;/li&gt;
-                &lt;li&gt;
-                    &lt;a href="#" title="서브메뉴 02"&gt;서브메뉴 02&lt;/a&gt;
-                &lt;/li&gt;
-                &lt;li&gt;
-                    &lt;a href="#" title="서브메뉴 03"&gt;서브메뉴 03&lt;/a&gt;
-                &lt;/li&gt;
-                &lt;li&gt;
-                    &lt;a href="#" title="서브메뉴 04"&gt;서브메뉴 04&lt;/a&gt;
-                &lt;/li&gt;
-                &lt;li&gt;
-                    &lt;a href="#" title="서브메뉴 05"&gt;서브메뉴 05&lt;/a&gt;
-                &lt;/li&gt;
-            &lt;/ul&gt;
-        &lt;/li&gt;
-        &lt;li&gt;
-            &lt;a href="#none" title="메뉴02"&gt;메뉴 02&lt;/a&gt;
-            &lt;ul class="depthTwo"&gt;
-                &lt;li&gt;
-                    &lt;a href="#" title="서브메뉴 01"&gt;서브메뉴 01&lt;/a&gt;
-                &lt;/li&gt;
-                &lt;li&gt;
-                    &lt;a href="#" title="서브메뉴 02"&gt;서브메뉴 02&lt;/a&gt;
-                &lt;/li&gt;
-                &lt;li&gt;
-                    &lt;a href="#" title="서브메뉴 03"&gt;서브메뉴 03&lt;/a&gt;
-                &lt;/li&gt;
-                &lt;li&gt;
-                    &lt;a href="#" title="서브메뉴 04"&gt;서브메뉴 04&lt;/a&gt;
-                &lt;/li&gt;
-            &lt;/ul&gt;
-        &lt;/li&gt;
-        &lt;li&gt;
-            &lt;a href="#none" title="메뉴03"&gt;메뉴 03&lt;/a&gt;
-            &lt;ul class="depthTwo"&gt;
-                &lt;li&gt;
-                    &lt;a href="#" title="서브메뉴 01"&gt;서브메뉴 01&lt;/a&gt;
-                &lt;/li&gt;
-                &lt;li&gt;
-                    &lt;a href="#" title="서브메뉴 02"&gt;서브메뉴 02&lt;/a&gt;
-                &lt;/li&gt;
-                &lt;li&gt;
-                    &lt;a href="#" title="서브메뉴 03"&gt;서브메뉴 03&lt;/a&gt;
-                &lt;/li&gt;
-            &lt;/ul&gt;
-        &lt;/li&gt;
-        &lt;li&gt;
-            &lt;a href="#none" title="메뉴04"&gt;메뉴 04&lt;/a&gt;
-            &lt;ul class="depthTwo"&gt;
-                &lt;li&gt;
-                    &lt;a href="#" title="서브메뉴 01"&gt;서브메뉴 01&lt;/a&gt;
-                &lt;/li&gt;
-                &lt;li&gt;
-                    &lt;a href="#" title="서브메뉴 02"&gt;서브메뉴 02&lt;/a&gt;
-                &lt;/li&gt;
-                &lt;li&gt;
-                    &lt;a href="#" title="서브메뉴 03"&gt;서브메뉴 03&lt;/a&gt;
-                &lt;/li&gt;
-                &lt;li&gt;
-                    &lt;a href="#" title="서브메뉴 04"&gt;서브메뉴 04&lt;/a&gt;
-                &lt;/li&gt;
-            &lt;/ul&gt;
-        &lt;/li&gt;
-        &lt;li&gt;
-            &lt;a href="#none" title="메뉴05"&gt;메뉴 05&lt;/a&gt;
-            &lt;ul class="depthTwo"&gt;
-                &lt;li&gt;
-                    &lt;a href="#" title="서브메뉴 01"&gt;서브메뉴 01&lt;/a&gt;
-                &lt;/li&gt;
-                &lt;li&gt;
-                    &lt;a href="#" title="서브메뉴 02"&gt;서브메뉴 02&lt;/a&gt;
-                &lt;/li&gt;
-                &lt;li&gt;
-                    &lt;a href="#" title="서브메뉴 03"&gt;서브메뉴 03&lt;/a&gt;
-                &lt;/li&gt;
-                &lt;li&gt;
-                    &lt;a href="#" title="서브메뉴 04"&gt;서브메뉴 04&lt;/a&gt;
-                &lt;/li&gt;
-            &lt;/ul&gt;
-        &lt;/li&gt;
-    &lt;/ul&gt;
+&lt;div id="wrap"&gt;
+  &lt;div id="gnb"&gt;
+      &lt;div id="menuBg"&gt;&lt;/div&gt;
+      &lt;ul class="menuList"&gt;
+          &lt;li&gt;
+              &lt;a href="#none" title="메뉴01"&gt;메뉴 01&lt;/a&gt;
+              &lt;ul class="depthTwo"&gt;
+                  &lt;li&gt;
+                      &lt;a href="#" title="서브메뉴 01"&gt;서브메뉴 01&lt;/a&gt;
+                  &lt;/li&gt;
+                  &lt;li&gt;
+                      &lt;a href="#" title="서브메뉴 02"&gt;서브메뉴 02&lt;/a&gt;
+                  &lt;/li&gt;
+                  &lt;li&gt;
+                      &lt;a href="#" title="서브메뉴 03"&gt;서브메뉴 03&lt;/a&gt;
+                  &lt;/li&gt;
+                  &lt;li&gt;
+                      &lt;a href="#" title="서브메뉴 04"&gt;서브메뉴 04&lt;/a&gt;
+                  &lt;/li&gt;
+                  &lt;li&gt;
+                      &lt;a href="#" title="서브메뉴 05"&gt;서브메뉴 05&lt;/a&gt;
+                  &lt;/li&gt;
+              &lt;/ul&gt;
+          &lt;/li&gt;
+          &lt;li&gt;
+              &lt;a href="#none" title="메뉴02"&gt;메뉴 02&lt;/a&gt;
+              &lt;ul class="depthTwo"&gt;
+                  &lt;li&gt;
+                      &lt;a href="#" title="서브메뉴 01"&gt;서브메뉴 01&lt;/a&gt;
+                  &lt;/li&gt;
+                  &lt;li&gt;
+                      &lt;a href="#" title="서브메뉴 02"&gt;서브메뉴 02&lt;/a&gt;
+                  &lt;/li&gt;
+                  &lt;li&gt;
+                      &lt;a href="#" title="서브메뉴 03"&gt;서브메뉴 03&lt;/a&gt;
+                  &lt;/li&gt;
+                  &lt;li&gt;
+                      &lt;a href="#" title="서브메뉴 04"&gt;서브메뉴 04&lt;/a&gt;
+                  &lt;/li&gt;
+              &lt;/ul&gt;
+          &lt;/li&gt;
+          &lt;li&gt;
+              &lt;a href="#none" title="메뉴03"&gt;메뉴 03&lt;/a&gt;
+              &lt;ul class="depthTwo"&gt;
+                  &lt;li&gt;
+                      &lt;a href="#" title="서브메뉴 01"&gt;서브메뉴 01&lt;/a&gt;
+                  &lt;/li&gt;
+                  &lt;li&gt;
+                      &lt;a href="#" title="서브메뉴 02"&gt;서브메뉴 02&lt;/a&gt;
+                  &lt;/li&gt;
+                  &lt;li&gt;
+                      &lt;a href="#" title="서브메뉴 03"&gt;서브메뉴 03&lt;/a&gt;
+                  &lt;/li&gt;
+              &lt;/ul&gt;
+          &lt;/li&gt;
+          &lt;li&gt;
+              &lt;a href="#none" title="메뉴04"&gt;메뉴 04&lt;/a&gt;
+              &lt;ul class="depthTwo"&gt;
+                  &lt;li&gt;
+                      &lt;a href="#" title="서브메뉴 01"&gt;서브메뉴 01&lt;/a&gt;
+                  &lt;/li&gt;
+                  &lt;li&gt;
+                      &lt;a href="#" title="서브메뉴 02"&gt;서브메뉴 02&lt;/a&gt;
+                  &lt;/li&gt;
+                  &lt;li&gt;
+                      &lt;a href="#" title="서브메뉴 03"&gt;서브메뉴 03&lt;/a&gt;
+                  &lt;/li&gt;
+                  &lt;li&gt;
+                      &lt;a href="#" title="서브메뉴 04"&gt;서브메뉴 04&lt;/a&gt;
+                  &lt;/li&gt;
+              &lt;/ul&gt;
+          &lt;/li&gt;
+          &lt;li&gt;
+              &lt;a href="#none" title="메뉴05"&gt;메뉴 05&lt;/a&gt;
+              &lt;ul class="depthTwo"&gt;
+                  &lt;li&gt;
+                      &lt;a href="#" title="서브메뉴 01"&gt;서브메뉴 01&lt;/a&gt;
+                  &lt;/li&gt;
+                  &lt;li&gt;
+                      &lt;a href="#" title="서브메뉴 02"&gt;서브메뉴 02&lt;/a&gt;
+                  &lt;/li&gt;
+                  &lt;li&gt;
+                      &lt;a href="#" title="서브메뉴 03"&gt;서브메뉴 03&lt;/a&gt;
+                  &lt;/li&gt;
+                  &lt;li&gt;
+                      &lt;a href="#" title="서브메뉴 04"&gt;서브메뉴 04&lt;/a&gt;
+                  &lt;/li&gt;
+              &lt;/ul&gt;
+          &lt;/li&gt;
+      &lt;/ul&gt;
+  &lt;/div&gt;
 &lt;/div&gt;
                               </code>
                             </pre>
@@ -423,7 +425,7 @@
                   <pre>
                               <code class="language-scss">
 #gnb{width: 100%;
-  #menuBg{display: none; position: absolute; left: 0; top: 120px; width: 100%; height:365px; border-top: 1px solid #ddd;
+  #menuBg{display: none; position: absolute; left: 0; top: 50px; width: 100%; height:365px; border-top: 1px solid #ddd;
   box-shadow:-3px 3px 3px 0 rgba(0, 0, 0, 0.2); background-color: #fff; z-index: 1000;}
   ul.menuList{display: flex; justify-content: space-between;
     a{display: block;}
@@ -454,7 +456,7 @@
   display: none;
   position: absolute;
   left: 0;
-  top: 120px;
+  top: 50px;
   width: 100%;
   height: 365px;
   border-top: 1px solid #ddd;
@@ -516,7 +518,7 @@
                 <div class="highlightArea cScroll">
                   <pre>
                               <code class="language-javascript">
-$(document).ready(function(){
+$(function(){
   $('#gnb').hover(function(){
     $('#menuBg,.depthTwo').stop().slideDown();
   },function(){
